Add new tests for read only precompiles
Signed-off-by: Yordan Iliev <yordan.iliev@limechain.tech>